Update class